--- a/public/css/style2.css
+++ b/public/css/style2.css
@@ -1,29 +1,6 @@
-.border{ border: 1px solid red!important; }
-
-#img-ppal{
-	background: url('../images/aplication/Mercado_de_Artesanias_Muebles_2.JPG') 100%/100% no-repeat;
-	height: 300px!important;
-}
-#ms{ background: rgba(0, 0, 0, 0.5); }
-/* ==================================== Class ======================================= */
-/* Letters Colors*/
-.color1{ color: #fff!important; }
-.op-menu{
-	background: rgba(0, 0, 0, 0.1);
-	border: 1px solid #fff!important;
-	border-radius: 4px;
-	margin-right:10px;
-}
-.op-menu:hover{
-	background: rgba(0, 0, 0, 0.3);
-	border: 1px solid #fff!important;
-	border-radius: 4px;
-	margin-right:10px;
-}
-.op-menu a{
-	margin: 0px!important;
-	padding: 5px 20px!important;
-}
-.op-menu:hover a{
-	padding: 5px 20px!important;
-}
+.border{border:1px solid red!important;}
+/* ===================================*/
+/* class colors letters */
+.color1{color: rgba(255, 255, 255, 1.0);}
+/* ===================================*/
+#img-ppal{ background:url('../images/aplication/Mercado_de_Artesanias_Muebles_2.JPG')90%/100% no-repeat; }
