base de datos, vista "order" y OrderController

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -29,7 +29,7 @@
 .op-menu:hover a{
 	padding: 5px 20px!important;
 }
-/* home*/
+/* Home*/
 #product-home div div { height: 200px; }
 #product-home div h5  { 
 	background-color: rgba(0,0,0,0.5); 
@@ -42,3 +42,4 @@ a#link-morders{
 	background-color:#f2dede;
 	color:#a94442;
 }
+/*Order*/
