--- a/public/css/style.css
+++ b/public/css/style.css
@@ -14,6 +14,8 @@
 .transition{ transition: all .5s; }
 /* ================================== Especific ===================================== */
 /* Menu normal*/
+#btn-login,
+#btn-register{ color:#fff!important; }
 .op-menu{
 	background: rgba(0, 0, 0, 0.1);
 	border: 1px solid #fff!important;
@@ -21,7 +23,7 @@
 	margin-right:10px;
 }
 .op-menu:hover{
-	background: rgba(0, 0, 0, 0.3);
+	background: rgba(0, 0, 0, 0.5);
 	border: 1px solid #fff!important;
 	border-radius: 4px;
 	margin-right:10px;
