--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,9 +1,11 @@
 .border{ border: 1px solid red!important; }
-
-#img-ppal{
-	background: url('../images/aplication/Mercado_de_Artesanias_Muebles_2.JPG') 100%/100% no-repeat;
-	height: 300px!important;
+.wTotal{ width: 100%!important; }
+.hTotal{ height:100%!important; }
+.activeMenu{ 
+	background-color:rgba(0, 0, 0, 0.5)!important;
+	color:#fff!important;
 }
+
 #ms{ background: rgba(0, 0, 0, 0.5); }
 /* ==================================== Class ======================================= */
 /* Letters Colors*/
@@ -13,6 +15,11 @@
 /* Effect */
 .transition{ transition: all .5s; }
 /* ================================== Especific ===================================== */
+/**/
+#img-ppal{
+	background: url('../images/aplication/Mercado_de_Artesanias_Muebles_2.JPG') 100%/100% no-repeat;
+	height: 300px!important;
+}
 /* Menu normal*/
 #btn-login,
 #btn-register{ color:#fff!important; }
